--- a/style.css
+++ b/style.css
@@ -2,19 +2,87 @@
 body{
     background: #C7EAE4;
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+    color: #3c3c3c;
+}
+h1{
+    font-family: 'Rancho', cursive;
+    font-size: 90px;
+    color: #59C9D5;
+    text-align: center;
+    padding-top: 10px;
+}
+.buttons{
+    display: inline-block;
+    position: absolute;
+    top: 200px;
+    left: 100px;
+}
+#start{
+    width: 100px;
+    font-size: 50px;
+    text-align: center;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 10px;
+    background: #4BC6B9;
+    display: inline-block;
+}
+#start:hover{
+    background: #67dbcf;
+    transition: 0.5s ease;
+}
+#counter {
+    width: 100px;
+    font-size: 50px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 100%;
+    background: #FCFC62;
+    display: inline-block;
+    position: relative;
+    top: 120px;
+    right: 160px;
+}
+#instructions_title{
+    display: block;
+    text-align: left;
+    position: absolute;
+    top: 45px;
+    right: 20px;
+}
+#instructions_title:hover{
+    color: #f37748;
+    transition: 0.5s ease;
+}
+.instructions{
+    width: 430px;
+    padding: 20px;
+    background: rgba(250,250,250,0.55);
+    border-radius: 15px;
+    display: inline-block;
+    position: absolute;
+    top: 180px;
+    right: 20px;
+   
+    /*visibility: visible;*/
+}
+.instructions p {
+    padding: 10px;
 }
 #bunny{
     width: 300px;
     height: 500px;
     background: #EF5C6E;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: 100px;
 }
 #grass {
-    height: 200px;
-    width: 800px;
+    height: 100px;
+    width: 100vw;
     background: #86AF49;
-}
-h1{
-    font-family: 'Rancho', cursive;
-    font-size: 42px;
-    color: #4BC6B9;
+    position: absolute;
+    bottom: 0;
 }
