--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
     text-align: center;
     padding-top: 10px;
 }
-/*clouds*/
+/* ####### CLOUDS ###### */
 .cloud_container{
     height: 20vh;
     width: 5076px;
@@ -29,7 +29,7 @@ h1{
     background: url("assets/cloud.png");
     width: 200px;
     height: 110px;
-    opacity: 0.7;
+    opacity: 0.8;
     position: relative;
     display: inline-block;
     animation: floatingclouds 80s linear infinite;
@@ -40,14 +40,14 @@ h1{
 }
 .c2{
     transform: scale(0.6);
-	opacity: 0.6;
+	opacity: 0.7;
     top: 15%;
     left: 500px;
     animation: floatingclouds 60s linear infinite;
 }
 .c3{
     transform: scale(0.7);
-	opacity: 0.5;
+	opacity: 0.6;
     top: -10%;
     left: -200px;
     animation: floatingclouds 70s linear infinite;
@@ -65,7 +65,7 @@ h1{
         left: 1000px;
     }
 }
-/*buttons*/
+/* ###### BUTTONS ###### */
 .buttons{
     display: inline-block;
     position: absolute;
@@ -123,12 +123,12 @@ h1{
     position: absolute;
     top: 180px;
     right: 20px;
-    visibility: hidden;
+    visibility: visible;
 }
 .instructions p {
     padding: 10px;
 }
-/*bunny*/
+/* ###### BUNNY ###### */
 #bunny{
     width: 300px;
     height: 500px;
@@ -148,7 +148,7 @@ h1{
     display: inline-block;
     position: relative;
     left: 55px;
-    background: #EF5C6E;
+    background: #fafafa;
     transform: rotate(-10deg);
 }
 .left_innerear{
@@ -170,7 +170,7 @@ h1{
     display: inline-block;
     position: relative;
     left: 80px;
-    background: #EF5C6E;
+    background: #fafafa;
     transform: rotate(10deg);
 }
 .right_innerear{
@@ -190,9 +190,9 @@ h1{
     box-sizing: border-box;
     position: relative;
     bottom: 375px;
-    background: #EF5C6E;
+    background: #fafafa;
     left: 25px;
-    border: 1px solid brown;
+    border: 1px solid #e0e0e0;
 }
 .left_eye{
     position: relative;
@@ -232,17 +232,27 @@ h1{
 .bunny_body{
     height: 300px;
     width: 300px;
-    border: 1px solid black;
+    border: 1px solid #e0e0e0;
     border-radius: 100%;
     box-sizing: border-box;
     position: relative;
+    background: #fafafa;
+}
+.egg {
+    height: 185px;
+    width: 150px;
     background: #EF5C6E;
+    position: relative;
+    left: 70px;
+    top: 50px;
+    border-radius: 50%;
+    z-index: 1;
 }
 .left_leg{
     height: 50px;
     width: 100px;
-    background: #EF5C6E;
-    border: 1px solid black;
+    background: #fafafa;
+    border: 1px solid #e0e0e0;
     position: relative;
     bottom: 255px;
     border-top-right-radius: 50%;
@@ -254,8 +264,8 @@ h1{
 .right_leg{
     height: 50px;
     width: 100px;
-    background: #EF5C6E;
-    border: 1px solid black;
+    background: #fafafa;
+    border: 1px solid #e0e0e0;
     position: relative;
     bottom: 255px;
     left: 90px;
@@ -281,7 +291,7 @@ h1{
     transform: translate(20px,0);
     transition: all 0.2s ease-in-out;
 }
-/*grass*/
+/* ###### GRASS ###### */
 #ground {
     height: 100px;
     width: 100vw;
