--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 h1{
     font-family: 'Rancho', cursive;
-    font-size: 90px;
+    font-size: 9vw;
     color: #59C9D5;
     text-shadow: 2px 2px 4px #087E8B;
     text-align: center;
@@ -29,14 +29,14 @@ h1{
     background: url("assets/cloud.png");
     width: 200px;
     height: 110px;
-    opacity: 0.8;
     position: relative;
     display: inline-block;
-    animation: floatingclouds 80s linear infinite;
 }
 .c1{
     top: 30%;
     left: 300px;
+    opacity: 0.8;
+    animation: floatingclouds 80s linear infinite;
 }
 .c2{
     transform: scale(0.6);
@@ -65,23 +65,25 @@ h1{
         left: 1000px;
     }
 }
-/* ###### BUTTONS ###### */
+/* ###### START & COUNTER ###### */
 .buttons{
     display: inline-block;
     position: absolute;
     top: 200px;
     left: 100px;
 }
-#start{
+#start, #counter{
     width: 100px;
     font-size: 50px;
     text-align: center;
-    color: #fff;
     padding: 10px 30px;
     border-radius: 10px;
+    display: inline-block;
+}
+#start {
+    color: #fff;
     background: #4BC6B9;
     box-shadow: 2px 4px 3px #b3d8d2;
-    display: inline-block;
 }
 #start:hover{
     background: #67dbcf;
@@ -89,32 +91,26 @@ h1{
     cursor: pointer;
 }
 #counter {
-    width: 50px;
-    height: 50px;
-    font-size: 50px;
-    text-align: center;
-    padding: 20px;
-    border-radius: 100%;
     background: #FCFC62;
-    display: inline-block;
     position: relative;
-    top: 120px;
-    right: 135px;
+    top: 90px;
+    right: 165px;
 }
-#instructions_label{
+/* ###### INSTRUCTIONS ###### */
+#instructions{
     display: block;
     text-align: left;
     position: absolute;
     top: 45px;
     right: 30px;
 }
-#instructions_label:hover{
+#instructions:hover{
     color: #f37748;
     transition: 0.5s ease;
     text-decoration: underline;
     text-decoration-style: dotted;
 }
-.instructions{
+.instructions_text{
     width: 430px;
     padding: 20px;
     background: rgba(250,250,250,0.55);
@@ -123,7 +119,7 @@ h1{
     position: absolute;
     top: 180px;
     right: 20px;
-    visibility: visible;
+    visibility: hidden;
 }
 .instructions p {
     padding: 10px;
@@ -139,7 +135,7 @@ h1{
     left: 40vw;
     z-index: 1;
 }
-.left_ear{
+.left_ear, .right_ear{
     height: 200px;
     width: 75px;
     box-sizing: border-box;
@@ -147,33 +143,17 @@ h1{
     border-top-left-radius: 50%;
     display: inline-block;
     position: relative;
-    left: 55px;
     background: #fafafa;
+}
+.left_ear{
+    left: 55px;
     transform: rotate(-10deg);
 }
-.left_innerear{
-    height: 150px;
-    width: 35px;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
-    background: #f2dcde;
-    margin: 0 auto;
-    position: relative;
-    bottom: -15px;
-}
 .right_ear{
-    height: 200px;
-    width: 75px;
-    box-sizing: border-box;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
-    display: inline-block;
-    position: relative;
     left: 80px;
-    background: #fafafa;
     transform: rotate(10deg);
 }
-.right_innerear{
+.left_innerear, .right_innerear{
     height: 150px;
     width: 35px;
     border-top-right-radius: 50%;
@@ -194,29 +174,24 @@ h1{
     left: 25px;
     border: 1px solid #e0e0e0;
 }
-.left_eye{
+.left_eye, .right_eye{
     position: relative;
     width: 25px;
     height: 25px;
     border-bottom: 5px solid transparent;
     border-top: 10px solid #21130C;
     border-radius: 50%;
-    left: 75px;
     top: 50px;
-    transform: rotate(-5deg);
     display: inline-block;
 }
+.left_eye{
+    left: 75px;
+    transform: rotate(-5deg);
+}
 .right_eye{
-    position: relative;
-    width: 25px;
-    height: 25px;
-    border-bottom: 5px solid transparent;
-    border-top: 10px solid #21130C;
-    border-radius: 50%;
     left: 100px;
     top: 50px;
     transform: rotate(5deg);
-    display: inline-block;
 }
 .nose{
     position: relative;
@@ -248,13 +223,12 @@ h1{
     border-radius: 50%;
     z-index: 1;
 }
-.left_paw{
+.left_paw, .right_paw{
     height: 50px;
     width: 85px;
     background: #fafafa;
     border: 1px solid #e0e0e0;
     position: relative;
-    left: 10px;
     bottom: 60px;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
@@ -262,25 +236,16 @@ h1{
     border-bottom-right-radius: 15%;
     display: inline-block;
     z-index: 1;
+}
+.left_paw{
+    left: 10px;
     transform: rotate(-90deg);
 }
 .right_paw{
-    height: 50px;
-    width: 85px;
-    background: #fafafa;
-    border: 1px solid #e0e0e0;
-    position: relative;
     left: 95px;
-    bottom: 60px;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 25%;
-    border-bottom-right-radius: 15%;
-    display: inline-block;
-    z-index: 1;
     transform: rotate(90deg);
 }
-.left_leg{
+.left_leg, .right_leg{
     height: 50px;
     width: 100px;
     background: #fafafa;
@@ -289,24 +254,18 @@ h1{
     bottom: 255px;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
+    display: inline-block;
+}
+.left_leg{
     border-bottom-left-radius: 25%;
     border-bottom-right-radius: 15%;
-    display: inline-block;
 }
 .right_leg{
-    height: 50px;
-    width: 100px;
-    background: #fafafa;
-    border: 1px solid #e0e0e0;
-    position: relative;
-    bottom: 255px;
     left: 90px;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
     border-bottom-left-radius: 15%;
     border-bottom-right-radius: 25%;
-    display: inline-block;
 }
+/* ###### HOVER EFFECTS ###### */
 .left_ear:hover{
     transform: rotate(-30deg);
     transition: all 0.2s ease-in-out;
@@ -315,11 +274,7 @@ h1{
     transform: rotate(30deg);
     transition: all 0.2s ease-in-out;
 }
-.left_paw:hover{
-    bottom: 80px;
-    transition: all 0.2s ease-in-out;
-}
-.right_paw:hover{
+.left_paw:hover, .right_paw:hover{
     bottom: 80px;
     transition: all 0.2s ease-in-out;
 }
