--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1{
     text-align: center;
     padding-top: 10px;
 }
+
 /* ####### CLOUDS ###### */
 .cloud_container{
     height: 20vh;
@@ -65,6 +66,7 @@ h1{
         left: 1000px;
     }
 }
+
 /* ###### START & COUNTER ###### */
 .buttons{
     display: inline-block;
@@ -82,7 +84,7 @@ h1{
 }
 #start {
     color: #fff;
-    background: #4BC6B9;
+    background: #59C9D5;
     box-shadow: 2px 4px 3px #b3d8d2;
 }
 #start:hover{
@@ -115,11 +117,10 @@ h1{
     padding: 20px;
     background: rgba(250,250,250,0.55);
     border-radius: 15px;
-    display: inline-block;
     position: absolute;
     top: 180px;
     right: 20px;
-    visibility: hidden;
+    display: none;
 }
 .instructions p {
     padding: 10px;
