--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h1{
     cursor: pointer;
 }
 #counter {
-    background: #FCFC62;
+    background: #e2ffb7;
     position: relative;
     top: 90px;
     right: 165px;
@@ -120,7 +120,6 @@ h1{
     position: absolute;
     top: 180px;
     right: 20px;
-    display: none;
 }
 .instructions p {
     padding: 10px;
@@ -267,7 +266,7 @@ h1{
     border-bottom-right-radius: 25%;
 }
 /* ###### HOVER EFFECTS ###### */
-.left_ear:hover{
+/*.left_ear:hover{
     transform: rotate(-30deg);
     transition: all 0.2s ease-in-out;
 }
@@ -286,7 +285,7 @@ h1{
 .right_leg:hover{
     transform: translate(20px,0);
     transition: all 0.2s ease-in-out;
-}
+}*/
 /* ###### GRASS ###### */
 #ground {
     height: 100px;
