--- a/style.css
+++ b/style.css
@@ -67,14 +67,14 @@ h1{
     }
 }
 
-/* ###### START & COUNTER ###### */
+/* ###### START, RESTART & COUNTER ###### */
 .buttons{
     display: inline-block;
     position: absolute;
     top: 200px;
     left: 100px;
 }
-#start, #counter{
+#start, #counter, #restart{
     width: 100px;
     font-size: 50px;
     text-align: center;
@@ -82,12 +82,19 @@ h1{
     border-radius: 10px;
     display: inline-block;
 }
-#start {
+#start, #restart {
     color: #fff;
     background: #59C9D5;
     box-shadow: 2px 4px 3px #b3d8d2;
 }
-#start:hover{
+#restart {
+    font-size: 40px;
+    position: relative;
+    top: 178px;
+    right: 335px;
+    display: none;
+}
+#start:hover, #restart:hover{
     background: #67dbcf;
     transition: 0.5s ease;
     cursor: pointer;
@@ -96,7 +103,7 @@ h1{
     background: #e2ffb7;
     position: relative;
     top: 90px;
-    right: 165px;
+    right: 167px;
 }
 /* ###### INSTRUCTIONS ###### */
 #instructions{
@@ -135,7 +142,7 @@ h1{
     left: 40vw;
     z-index: 1;
 }
-.left_ear, .right_ear{
+#left_ear, #right_ear{
     height: 200px;
     width: 75px;
     box-sizing: border-box;
@@ -145,11 +152,11 @@ h1{
     position: relative;
     background: #fafafa;
 }
-.left_ear{
+#left_ear{
     left: 55px;
     transform: rotate(-10deg);
 }
-.right_ear{
+#right_ear{
     left: 80px;
     transform: rotate(10deg);
 }
@@ -223,7 +230,7 @@ h1{
     border-radius: 50%;
     z-index: 1;
 }
-.left_paw, .right_paw{
+#left_paw, #right_paw{
     height: 50px;
     width: 85px;
     background: #fafafa;
@@ -237,15 +244,15 @@ h1{
     display: inline-block;
     z-index: 1;
 }
-.left_paw{
+#left_paw{
     left: 10px;
     transform: rotate(-90deg);
 }
-.right_paw{
+#right_paw{
     left: 95px;
     transform: rotate(90deg);
 }
-.left_leg, .right_leg{
+#left_leg, #right_leg{
     height: 50px;
     width: 100px;
     background: #fafafa;
@@ -256,33 +263,33 @@ h1{
     border-top-left-radius: 50%;
     display: inline-block;
 }
-.left_leg{
+#left_leg{
     border-bottom-left-radius: 25%;
     border-bottom-right-radius: 15%;
 }
-.right_leg{
+#right_leg{
     left: 90px;
     border-bottom-left-radius: 15%;
     border-bottom-right-radius: 25%;
 }
 /* ###### HOVER EFFECTS ###### */
-/*.left_ear:hover{
+/*#left_ear:hover{
     transform: rotate(-30deg);
     transition: all 0.2s ease-in-out;
 }
-.right_ear:hover{
+#right_ear:hover{
     transform: rotate(30deg);
     transition: all 0.2s ease-in-out;
 }
-.left_paw:hover, .right_paw:hover{
+#left_paw:hover, #right_paw:hover{
     bottom: 80px;
     transition: all 0.2s ease-in-out;
 }
-.left_leg:hover{
+#left_leg:hover{
     transform: translate(-20px,0);
     transition: all 0.2s ease-in-out;
 }
-.right_leg:hover{
+#right_leg:hover{
     transform: translate(20px,0);
     transition: all 0.2s ease-in-out;
 }*/
