--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1{
     top: 200px;
     left: 100px;
 }
-#start, #counter, #restart{
+#start, #display, #restart{
     width: 100px;
     font-size: 50px;
     text-align: center;
@@ -99,7 +99,7 @@ h1{
     transition: 0.5s ease;
     cursor: pointer;
 }
-#counter {
+#display {
     background: #e2ffb7;
     position: relative;
     top: 90px;
