--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Rancho');
-html{
+html {
     min-height: 100%;
 }
-body{
+body {
     background: linear-gradient(#e8f7f4,#C7EAE4);
     font-family: 'Josefin Sans', sans-serif;
     font-size: 30px;
     color: #495159;
     overflow: hidden;
 }
-h1{
+h1 {
     font-family: 'Rancho', cursive;
     font-size: 9vw;
     color: #59C9D5;
@@ -19,41 +19,41 @@ h1{
 }
 
 /* ####### CLOUDS ###### */
-.cloud_container{
+.cloud_container {
     height: 20vh;
     width: 5076px;
     position: absolute;
     top: 0;
     z-index: -1;
 }
-.cloud{
+.cloud {
     background: url("assets/cloud.png");
     width: 200px;
     height: 110px;
     position: relative;
     display: inline-block;
 }
-.c1{
+.c1 {
     top: 30%;
     left: 300px;
     opacity: 0.8;
     animation: floatingclouds 80s linear infinite;
 }
-.c2{
+.c2 {
     transform: scale(0.6);
 	opacity: 0.7;
     top: 15%;
     left: 500px;
     animation: floatingclouds 60s linear infinite;
 }
-.c3{
+.c3 {
     transform: scale(0.7);
 	opacity: 0.6;
     top: -10%;
     left: -200px;
     animation: floatingclouds 70s linear infinite;
 }
-.c4{
+.c4 {
     top: 3%;
     left: -800px;
     animation: floatingclouds 50s linear infinite;
@@ -68,13 +68,13 @@ h1{
 }
 
 /* ###### START, RESTART & COUNTER ###### */
-.buttons{
+.buttons {
     display: inline-block;
     position: absolute;
     top: 200px;
     left: 100px;
 }
-#start, #display, #restart{
+#start, #display {
     width: 100px;
     font-size: 50px;
     text-align: center;
@@ -82,19 +82,12 @@ h1{
     border-radius: 10px;
     display: inline-block;
 }
-#start, #restart {
+#start {
     color: #fff;
     background: #59C9D5;
     box-shadow: 2px 4px 3px #b3d8d2;
 }
-#restart {
-    font-size: 40px;
-    position: relative;
-    top: 178px;
-    right: 335px;
-    display: none;
-}
-#start:hover, #restart:hover{
+#start:hover {
     background: #67dbcf;
     transition: 0.5s ease;
     cursor: pointer;
@@ -106,20 +99,20 @@ h1{
     right: 167px;
 }
 /* ###### INSTRUCTIONS ###### */
-#instructions{
+#instructions {
     display: block;
     text-align: left;
     position: absolute;
     top: 45px;
     right: 30px;
 }
-#instructions:hover{
+#instructions:hover {
     color: #f37748;
     transition: 0.5s ease;
     text-decoration: underline;
     text-decoration-style: dotted;
 }
-.instructions_text{
+.instructions_text {
     width: 430px;
     padding: 20px;
     background: rgba(250,250,250,0.55);
@@ -133,7 +126,7 @@ h1{
     padding: 10px;
 }
 /* ###### BUNNY ###### */
-#bunny{
+#bunny {
     width: 300px;
     height: 500px;
     display: block;
@@ -143,7 +136,7 @@ h1{
     left: 40vw;
     z-index: 1;
 }
-#left_ear, #right_ear{
+#left_ear, #right_ear {
     height: 200px;
     width: 75px;
     box-sizing: border-box;
@@ -154,15 +147,15 @@ h1{
     background: #f2dcde;
     border: 20px solid #fafafa;
 }
-#left_ear{
+#left_ear {
     left: 55px;
     transform: rotate(-10deg);
 }
-#right_ear{
+#right_ear {
     left: 80px;
     transform: rotate(10deg);
 }
-.bunny_head{
+.bunny_head {
     height: 200px;
     width: 250px;
     border-radius: 100%;
@@ -173,7 +166,7 @@ h1{
     left: 25px;
     border: 1px solid #e0e0e0;
 }
-.left_eye, .right_eye{
+.left_eye, .right_eye {
     position: relative;
     width: 25px;
     height: 25px;
@@ -183,16 +176,16 @@ h1{
     top: 50px;
     display: inline-block;
 }
-.left_eye{
+.left_eye {
     left: 75px;
     transform: rotate(-5deg);
 }
-.right_eye{
+.right_eye {
     left: 100px;
     top: 50px;
     transform: rotate(5deg);
 }
-.nose{
+.nose {
     position: relative;
     width: 20px; 
     height: 15px; 
@@ -203,7 +196,7 @@ h1{
     left: 45px;
     top: 65px;
 }
-.bunny_body{
+.bunny_body {
     height: 300px;
     width: 300px;
     border: 1px solid #e0e0e0;
@@ -222,7 +215,7 @@ h1{
     border-radius: 50%;
     z-index: 1;
 }
-#left_paw, #right_paw{
+#left_paw, #right_paw {
     height: 50px;
     width: 85px;
     background: #fafafa;
@@ -236,15 +229,15 @@ h1{
     display: inline-block;
     z-index: 1;
 }
-#left_paw{
+#left_paw {
     left: 10px;
     transform: rotate(-90deg);
 }
-#right_paw{
+#right_paw {
     left: 95px;
     transform: rotate(90deg);
 }
-#left_leg, #right_leg{
+#left_leg, #right_leg {
     height: 50px;
     width: 100px;
     background: #fafafa;
@@ -255,11 +248,11 @@ h1{
     border-top-left-radius: 50%;
     display: inline-block;
 }
-#left_leg{
+#left_leg {
     border-bottom-left-radius: 25%;
     border-bottom-right-radius: 15%;
 }
-#right_leg{
+#right_leg {
     left: 90px;
     border-bottom-left-radius: 15%;
     border-bottom-right-radius: 25%;
@@ -293,13 +286,13 @@ h1{
     position: absolute;
     bottom: 0;
 }
-.grass_container{
+.grass_container {
     width: 100vw;
     height: 100px;
     position: absolute;
     bottom: 100px; 
 }
-.grass{
+.grass {
     height: 9vmin;
     width: 1vmin;
     border-right: 1px solid #86AF49;
@@ -310,19 +303,19 @@ h1{
     bottom: -1vh;
     animation: grassmove 0.5s infinite alternate;
 }
-.g1{
+.g1 {
     transform: rotate(-7deg);
     left: 10vw;
 }
-.g2{
+.g2 {
     transform: rotate(7deg);
     left: 12vw;
 }
-.g3{
+.g3 {
     transform: rotate(7deg);
     right: 10vw;
 }
-.g4{
+.g4 {
     transform: rotate(-7deg);
     right: 12vw;
 }
@@ -340,7 +333,7 @@ h1{
     border-top-left-radius: 80%;
   }
 }
-#ground p{
+#ground p {
     font-size: 25px;
     position: absolute;
     bottom: 5px;
